--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           VERSION=$(echo $GITHUB_REF | sed 's#.*/v##')
           PLACEHOLDER="__version__ = 'develop'"
-          VERSION_FILE='arq_admin/__init__.py'
+          VERSION_FILE='pytest_httpx_blockage/__init__.py'
           grep "$PLACEHOLDER" "$VERSION_FILE"
           sed -i "s/$PLACEHOLDER/__version__ = \"${VERSION}\"/g" "$VERSION_FILE"
         shell: bash
