--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,7 +9,7 @@ safety==2.3.5
 cognitive-complexity==1.3.0
 
 mccabe==0.7.0
-flake8==6.0.0
+flake8<6
 flake8-blind-except==0.2.1
 flake8-broken-line==0.6.0
 flake8-bugbear==23.2.13
@@ -22,7 +22,6 @@ flake8-debugger==4.1.2
 flake8-eradicate==1.4.0
 flake8-functions==0.0.7
 flake8-isort==6.0.0
-flake8-mock==0.3
 flake8-mutable==1.2.0
 flake8-print==5.0.0
 flake8-pytest==1.4
